sys/netgraph/bluetooth/drivers/ubt/ng_ubt_var.h
@@ -102,6 +102,10 @@ struct ubt_hci_event_command_compl {
 } __attribute__ ((packed));
 #define	UBT_HCI_EVENT_SIZE(evt) \
 	((evt)->header.length + offsetof(struct ubt_hci_event, data))
+#define	UBT_HCI_EVENT_COMPL_HEAD_SIZE \
+	(offsetof(struct ubt_hci_event_command_compl, data) - \
+	 offsetof(struct ubt_hci_event_command_compl, numpkt))
+
 
 /* USB device softc structure */
 struct ubt_softc {
